--- a/app.html
+++ b/app.html
@@ -19,19 +19,21 @@
       <h1>Q&A</h1>
       <div class="questions"></div>
       <br /><br />
-      <button class="btn previous disabled">
+      <!-- <button class="btn previous disabled">
         Previous <i class="material-icons right">chevron_left</i>
-      </button>
-      <button class="btn next">
-        Next <i class="material-icons right">chevron_right</i>
-      </button>
+      </button> -->
+      <div class="buttonContainer">
+        <button class="btn next">
+          Next <i class="material-icons right">chevron_right</i>
+        </button>
+      </div>
       <br />
       <p>Your Progress</p>
       <div class="progress">
         <div class="determinate" style="width: 0%;"></div>
       </div>
       <br /><br />
-      <form action="" method="get">
+      <!-- <form action="" method="get">
         <label for="qNumber">Go to question#: </label>
         <input
           type="number"
@@ -44,16 +46,16 @@
         <button class="btn" type="submit">
           Jump <i class="material-icons right">directions</i>
         </button>
-      </form>
+      </form> -->
 
       <br /><br />
-      <button
+      <!-- <button
         class="btn disabled done modal-trigger"
         type="submit"
         data-target="modal1"
       >
         done
-      </button>
+      </button> -->
     </div>
 
     <!-- Modal Structure -->
