--- a/app.html
+++ b/app.html
@@ -40,8 +40,8 @@
 
     <!-- Modal Structure -->
     <div id="modal1" class="modal modal-fixed-footer">
-      <div class="modal-content">
-        <div class="modalMsg"></div>
+      <div class="modal-content valign-wrapper">
+        <div class="modalMsg center-block"></div>
       </div>
       <div class="modal-footer">
         <a
