--- a/app.html
+++ b/app.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Q&A</h1>
+      <h1 class="center">SRA</h1>
       <div class="questions"></div>
       <br /><br />
       <div class="buttonContainer">
