--- a/app.html
+++ b/app.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="center">SRA</h1>
+      <h1 class="center">Practice Test App</h1>
       <div class="questions"></div>
       <br /><br />
       <div class="buttonContainer">
@@ -60,6 +60,7 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="app.js"></script>
+    <script type="module" scr="./sampleData.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
